update ikon admin

--- a/themes/cdmstheme/layouts/_default/single.html
+++ b/themes/cdmstheme/layouts/_default/single.html
@@ -9,7 +9,8 @@
           <div class="card">
             <div class="card-body">
               <div class="d-flex align-items-center">
-                <img src="{{ .Site.Author.image }}" alt="" width="40px" />
+                <!-- <img src="{{ .Site.Author.image }}" alt="" width="40px" /> -->
+                <img src="/img/akun.png" alt="" width="40px" />
                 <span class="d-block ml-2">{{ .Site.Author.name }} | <time>{{ .Date.Format "02-01-2006" }}</time></span>
               </div>
               <div class="detail-judul py-2">
