--- a/themes/cdmstheme/layouts/_default/laporan.html
+++ b/themes/cdmstheme/layouts/_default/laporan.html
@@ -20,6 +20,12 @@
        <a href="#"> Bulan Oktober 2022</a><br>
        <a href="#"> Bulan November 2022</a><br>
        <a href="#"> Bulan Desember 2022</a><br>
+
+      <h3 class="mt-3">Laporan Keuangan CDMS</h3>
+       <a href="https://bit.ly/keuangancdms">Bulan Spetember 2022</a><br>
+       <a href="#"> Bulan Oktober 2022</a><br>
+       <a href="#"> Bulan November 2022</a><br>
+       <a href="#"> Bulan Desember 2022</a><br>
     </div>
 </div>
 </div>
