--- a/themes/cdmstheme/layouts/_default/laporan.html
+++ b/themes/cdmstheme/layouts/_default/laporan.html
@@ -6,7 +6,7 @@
     <br>
 <div class="container mb-5 mt-5 pt-5">
     <div class="bg-white p-5 " style="border-radius: 20px;">
-       <h3>Laporan Kajian Ahad Pagi</h3>
+       <h3>Laporan Bidang Kajian CDMS</h3>
       
        <a href="/laporan/januari.docx"> Bulan Januari 2022</a><br>
        <a href="#"> Bulan februari 2022</a><br>
@@ -22,7 +22,7 @@
        <a href="#"> Bulan Desember 2022</a><br>
 
       <h3 class="mt-3">Laporan Keuangan CDMS</h3>
-       <a href="https://bit.ly/keuangancdms">Bulan Spetember 2022</a><br>
+       <a href="https://bit.ly/keuangancdms">Bulan September 2022</a><br>
        <a href="#"> Bulan Oktober 2022</a><br>
        <a href="#"> Bulan November 2022</a><br>
        <a href="#"> Bulan Desember 2022</a><br>
