--- a/themes/cdmstheme/layouts/_default/struktur.html
+++ b/themes/cdmstheme/layouts/_default/struktur.html
@@ -161,6 +161,57 @@
                   </div>
               </div>
           </div>
+          <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/Dada.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Dada Supriatna</h2>
+                      <center><span>-</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+            <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Alifian</h2>
+                      <center><span>Anggota Div Kajian</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+            <div class="box-cards">
+              <div class="imgBx">
+                  <img src="/img/struktur/default.png" alt="">
+              </div>
+              <div class="content">
+                  <div class="details">
+                      <h2>Maratus Sholihah</h2>
+                      <center><span>Anggota Div Kajian</span></center>
+                      <ul class="social_icons">
+                          <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
            <div class="box-cards">
               <div class="imgBx">
                   <img src="/img/struktur/Wahyu.png" alt="">
@@ -263,14 +314,15 @@
                   </div>
               </div>
           </div>
+           
            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/Dada.png" alt="">
+                  <img src="/img/struktur/Anggit.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Dada</h2>
-                      <center><span>-</span></center>
+                      <h2>Anggit Muliana </h2>
+                      <center><span>Anggota Media</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -280,14 +332,14 @@
                   </div>
               </div>
           </div>
-           <div class="box-cards">
+            <div class="box-cards">
               <div class="imgBx">
-                  <img src="/img/struktur/Anggit.png" alt="">
+                  <img src="/img/struktur/default.png" alt="">
               </div>
               <div class="content">
                   <div class="details">
-                      <h2>Anggit</h2>
-                      <center><span>-</span></center>
+                      <h2>Dhia</h2>
+                      <center><span>Anggota Media</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
