--- a/themes/cdmstheme/layouts/_default/struktur.html
+++ b/themes/cdmstheme/layouts/_default/struktur.html
@@ -168,7 +168,7 @@
               <div class="content">
                   <div class="details">
                       <h2>Dada Supriatna</h2>
-                      <center><span>-</span></center>
+                      <center><span>Anggota Div Kajian</span></center>
                       <ul class="social_icons">
                           <li><a href=""><i class="fab fa-facebook"></i></a></li>
                           <li><a href=""><i class="fab fa-twitter"></i></a></li>
