--- a/themes/cdmstheme/layouts/_default/laporan.html
+++ b/themes/cdmstheme/layouts/_default/laporan.html
@@ -10,11 +10,11 @@
       
        <a href="/laporan/januari.docx"> Bulan Januari 2022</a><br>
        <a href="#"> Bulan februari 2022</a><br>
-       <a href="#"> Bulan maret 2022</a><br>
+       <a href="/laporan/maret.pdf"> Bulan maret 2022</a><br>
        <a href="#"> Bulan April 2022</a> <br>
-       <a href="#"> Bulan Mei 2022</a><br>
-       <a href="#"> Bulan Juni 2022</a><br>
-       <a href="#"> Bulan Juli 2022</a> <br>
+       <a href="/laporan/mei.pdf"> Bulan Mei 2022</a><br>
+       <a href="/laporan/juni.pdf"> Bulan Juni 2022</a><br>
+       <a href="/laporan/juli.pdf"> Bulan Juli 2022</a> <br>
        <a href="#"> Bulan Agustus 2022</a><br>
        <a href="#"> Bulan Spetember 2022</a><br>
        <a href="#"> Bulan Oktober 2022</a><br>
@@ -22,10 +22,7 @@
        <a href="#"> Bulan Desember 2022</a><br>
 
       <h3 class="mt-3">Laporan Keuangan CDMS</h3>
-       <a href="https://bit.ly/keuangancdms">Bulan September 2022</a><br>
-       <a href="#"> Bulan Oktober 2022</a><br>
-       <a href="#"> Bulan November 2022</a><br>
-       <a href="#"> Bulan Desember 2022</a><br>
+       <a href="https://bit.ly/keuangancdms">Keuangan Januari - September</a><br>
     </div>
 </div>
 </div>
