--- a/layouts/index.html
+++ b/layouts/index.html
@@ -72,17 +72,19 @@
       </div>
     </section>
 
-    <!-- spotify -->
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/show/6o1d4CVZXBfDI7zqWXPrjb?utm_source=generator&theme=0"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
+    <div class="container my-sm-5">
+      <!-- spotify -->
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/show/6o1d4CVZXBfDI7zqWXPrjb?utm_source=generator&theme=0"
+        width="100%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
     <!-- Akhir spotify -->
     <!--Akhir Pengantar -->
     <h2 class="text-center mb-5 f-philo">Blog Terbaru</h2>
