update code cdms

--- a/themes/cdmstheme/layouts/_default/single.html
+++ b/themes/cdmstheme/layouts/_default/single.html
@@ -5,7 +5,7 @@
     <div class="container">
       <div class="row pt-5 mt-5 mb-5">
         <!-- <div class="col-md-8 mt-3"> -->
-        <div class="col-12 mt-3">
+        <div class="col-12 col-md-8  mt-3">
           <div class="card">
             <div class="card-body">
               <div class="d-flex align-items-center">
@@ -37,10 +37,10 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-md-4 mt-3">
-            {{ partial "aside.html" . }}
-        
-        </div> -->
+        <div class="col-12 col-md-4 mt-3 ">
+          {{ partial "aside.html" . }}
+          
+        </div> 
       </div>
     </div>
     <!-- Akhir detail -->
