--- a/layouts/index.html
+++ b/layouts/index.html
@@ -72,20 +72,6 @@
       </div>
     </section>
 
-    <div class="container my-sm-5">
-      <!-- spotify -->
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/show/6o1d4CVZXBfDI7zqWXPrjb?utm_source=generator&theme=0"
-        width="100%"
-        height="352"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
-    </div>
-    <!-- Akhir spotify -->
     <!--Akhir Pengantar -->
     <h2 class="text-center mb-5 f-philo">Blog Terbaru</h2>
     {{ partial "post-grid.html" . }}
@@ -163,11 +149,13 @@
           document.getElementById('navbar-home').style.backgroundColor = 'white';
           var element = document.getElementById('navbar-home');
           element.classList.add('navbar-light');
+          element.classList.add('border');
           element.classList.remove('navbar-dark');
         } else {
           document.getElementById('navbar-home').style.backgroundColor = 'transparent';
           var element = document.getElementById('navbar-home');
           element.classList.remove('navbar-light');
+          element.classList.remove('border');
           element.classList.add('navbar-dark');
         }
       }
