--- a/themes/cdmstheme/layouts/partials/aside.html
+++ b/themes/cdmstheme/layouts/partials/aside.html
@@ -5,7 +5,7 @@
     <a href="">
       <div class="row mb-3 text-dark">
         <div class="col-sm-4">
-          <img src="/img/3.JPG" alt="" width="100%" />
+          <img src="/img/bg-jumbotron.jpg" alt="" width="100%" />
         </div>
         <div class="col-sm-8">Lorem ipsum dolor, sit amet consectetur</div>
       </div>
@@ -13,7 +13,7 @@
     <a href="">
       <div class="row mb-3 text-dark">
         <div class="col-sm-4">
-          <img src="/img/3.JPG" alt="" width="100%" />
+          <img src="/img/bg-jumbotron.jpg" alt="" width="100%" />
         </div>
         <div class="col-sm-8">Lorem ipsum dolor, sit amet consectetur</div>
       </div>
@@ -21,10 +21,37 @@
     <a href="">
       <div class="row mb-3 text-dark">
         <div class="col-sm-4">
-          <img src="/img/3.JPG" alt="" width="100%" />
+          <img src="/img/bg-jumbotron.jpg" alt="" width="100%" />
         </div>
         <div class="col-sm-8">Lorem ipsum dolor, sit amet consectetur</div>
       </div>
     </a>
+  </div>
+</div>
+
+<div class="card mt-3">
+  <div class="card-body">
+    <h4>Follow Us</h4>
+    <hr />
+    <iframe
+      width="100%"
+      height="200px"
+      src="https://www.youtube.com/embed/videoseries?list=PLOh36NrkzyX83kwEULqonDP7gPa91Wsu1"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <div class="mt-2"></div>
+    <iframe
+      style="border-radius: 12px"
+      src="https://open.spotify.com/embed/show/6o1d4CVZXBfDI7zqWXPrjb?utm_source=generator&theme=0"
+      width="100%"
+      height="300"
+      frameborder="0"
+      allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy"
+    ></iframe>
   </div>
 </div>
