--- a/themes/cdmstheme/static/css/struktur.css
+++ b/themes/cdmstheme/static/css/struktur.css
@@ -1,5 +1,5 @@
 .box-kotak {
-  background-image: url(../img/3.JPG);
+  background-image: url(../img/bg-jumbotron.jpg);
   background-size: cover;
   background-attachment: fixed;
   background-position-y: center;
