--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,6 +2,40 @@
 <html>
   <head>
     {{ partial "head.html" . }}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <style>
+      .swiper {
+        width: 100%;
+        height: 100%;
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark py-3 fixed-top" id="navbar-home">
@@ -56,7 +90,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 col-sm-6">
-            <span class="f-philo f-ket">Selamat datang di website</span>
+            <!-- <span class="f-philo f-ket">Selamat datang di website</span> -->
             <h2 class="f-philo f-jdl">
               Corps Dakwah <br />
               Masjid Syuhada
@@ -66,7 +100,19 @@
             <a href="/profile" class="btn-custom text-center" style="border-radius: 5px">selengkapnya</a>
           </div>
           <div class="col-12 col-sm-6 mt-5 mt-sm-0">
-            <img src="/img/3.JPG" alt="" width="100%" style="border-radius: 5px" />
+            <!-- <img src="/img/3.JPG" alt="" width="100%" style="border-radius: 5px" /> -->
+            <div style="width: 100%; min-height: 300px; height: 100%">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="/img/slider/1.png" alt="" /></div>
+                  <div class="swiper-slide"><img src="/img/slider/2.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="/img/slider/3.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="/img/slider/4.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="/img/slider/5.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="/img/slider/6.jpg" alt="" /></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -159,6 +205,28 @@
           element.classList.add('navbar-dark');
         }
       }
+    </script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper('.mySwiper', {
+        spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
+        },
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+        },
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+      });
     </script>
     {{ partial "footer.html" . }} {{ partial "js-init.html" . }}
   </body>
