--- a/themes/cdmstheme/layouts/_default/donasipage.html
+++ b/themes/cdmstheme/layouts/_default/donasipage.html
@@ -6,7 +6,7 @@
    {{ partial "header.html" . }} 
 
     <div class="container mb-5">
-        <div class="card">
+        <div class="card card-postgrid">
             <div class="card-body">
               <div class="row justify-content-md-center donasi-isi align-items-center">
         <div class="col-12 col-sm-6 text-center text-md-right">
