--- a/themes/cdmstheme/static/css/style.css
+++ b/themes/cdmstheme/static/css/style.css
@@ -78,7 +78,7 @@ nav {
 /* Akhir jumbotron coursel */
 
 /* card Blog */
-.card {
+.card-postgrid {
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 0 200px rgba(0, 0, 0, 0.1);
