--- a/themes/cdmstheme/layouts/_default/single.html
+++ b/themes/cdmstheme/layouts/_default/single.html
@@ -6,7 +6,7 @@
       <div class="row pt-5 mt-5 mb-5">
         <!-- <div class="col-md-8 mt-3"> -->
         <div class="col-12 col-md-8  mt-3">
-          <div class="card">
+          <div class="card card-postgrid">
             <div class="card-body">
               <div class="d-flex align-items-center">
                 <!-- <img src="{{ .Site.Author.image }}" alt="" width="40px" /> -->
