--- a/themes/cdmstheme/layouts/partials/aside.html
+++ b/themes/cdmstheme/layouts/partials/aside.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card card-postgrid">
   <div class="card-body">
     <h4>Artikel Terbaru</h4>
     <hr />
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-<div class="card mt-3">
+<div class="card mt-3 card-postgrid">
   <div class="card-body">
     <h4>Follow Us</h4>
     <hr />
