--- a/themes/cdmstheme/layouts/partials/nav.html
+++ b/themes/cdmstheme/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top border">
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top border shadow-sm">
   <div class="container">
     <a class="navbar-brand" href="{{.Site.BaseURL}}"><img src="/img/logo.png" alt="" height="50px" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,9 +19,15 @@
         <li class="nav-item active">
           <a class="nav-link" href="/blog">Blog</a>
         </li>
+        <!-- <li class="nav-item active">
+          <a class="nav-link" href="/kegiatan">Program</a>
+        </li> -->
         <li class="nav-item active">
           <a class="nav-link" href="/laporan">Laporan</a>
         </li>
+        <!-- <li class="nav-item active">
+          <a class="nav-link" href="/kritik">Saran</a>
+        </li> -->
         <li class="nav-item active">
           <a class="nav-link btn btn-warning text-white btn-donasi" href="/donasi">Donasi</a>
         </li>
