--- a/themes/cdmstheme/layouts/partials/post-grid.html
+++ b/themes/cdmstheme/layouts/partials/post-grid.html
@@ -5,7 +5,7 @@
       {{ range .Paginator.Pages }}
       <div class="col-12 col-sm-6 col-md-4 mb-3">
         <a href="{{ .RelPermalink }}" class="card-blog">
-          <div class="card">
+          <div class="card card-postgrid">
             <img src="{{ .Params.Thumbnail}}" class="card-img-top" alt="..." />
             <div class="card-body">
               <b class="card-judul">{{ .Title }}</b>
