--- a/themes/cdmstheme/layouts/_default/laporan.html
+++ b/themes/cdmstheme/layouts/_default/laporan.html
@@ -71,13 +71,13 @@
         <div class="card-header" id="headingTwo">
           <h2 class="mb-0">
             <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-               <h4 class="text-dark" style="text-decoration: none;">Laporan Bidang Kajian</h4>
+               <h4 class="text-dark" style="text-decoration: none;">Laporan Keuangan CDMS</h4>
             </button>
           </h2>
         </div>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
           <div class="card-body">
-               <a href="https://bit.ly/keuangancdms">Keuangan Januari - September</a>
+               <a href="https://bit.ly/keuangancdms">Keuangan Januari - September 2022</a>
           </div>
         </div>
       </div>
