--- a/layouts/index.html
+++ b/layouts/index.html
@@ -60,6 +60,9 @@
               <a class="nav-link" href="/blog">Blog</a>
             </li>
             <li class="nav-item active">
+              <a class="nav-link" href="/galeri">Galeri</a>
+            </li>
+            <li class="nav-item active">
               <a class="nav-link" href="/laporan">Laporan</a>
             </li>
             <li class="nav-item active">
