--- a/themes/cdmstheme/layouts/_default/laporan.html
+++ b/themes/cdmstheme/layouts/_default/laporan.html
@@ -4,7 +4,7 @@
   <body>
     {{- partial "nav.html" . -}}
     <br>
-<div class="container mb-5 mt-5">
+<div class="container mb-5 mt-5" style="min-height: 500px;">
     <div class="bg-white" style="border-radius: 20px;">
       <div class="accordion mt-5 pt-5" id="accordionExample">
       <div class="card">
