--- a/themes/cdmstheme/layouts/partials/nav.html
+++ b/themes/cdmstheme/layouts/partials/nav.html
@@ -19,9 +19,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="/blog">Blog</a>
         </li>
-        <!-- <li class="nav-item active">
-          <a class="nav-link" href="/kegiatan">Program</a>
-        </li> -->
+        <li class="nav-item active">
+          <a class="nav-link" href="/galeri">Galeri</a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" href="/laporan">Laporan</a>
         </li>
