--- a/themes/cdmstheme/layouts/partials/aside.html
+++ b/themes/cdmstheme/layouts/partials/aside.html
@@ -1,4 +1,4 @@
-<div class="card card-postgrid">
+<!-- <div class="card card-postgrid">
   <div class="card-body">
     <h4>Artikel Terbaru</h4>
     <hr />
@@ -27,8 +27,16 @@
       </div>
     </a>
   </div>
+</div> -->
+<div class="card card-postgrid">
+  <div class="card-body">
+    <h4>Informasi</h4>
+    <hr />
+    <iframe id="iframe" title="prayerWidget" class="widget-m-top" style="width: 100%; height: 358px; border: 1px solid #ddd" scrolling="no" src="https://www.islamicfinder.org/prayer-widget/43695204/shafi/11/0/20/18"> </iframe>
+    <div style="height: 10px"></div>
+    <iframe id="h2gFrame" title="islamic-calendar" style="width: 100%; height: 312px; border: 1px solid #ddd" scrolling="no" src="https://www.islamicfinder.org/islamic-calendar/widgetGregorian?type=Hijri"> </iframe>
+  </div>
 </div>
-
 <div class="card mt-3 card-postgrid">
   <div class="card-body">
     <h4>Follow Us</h4>
