update laporan oktober

--- a/themes/cdmstheme/layouts/_default/laporan.html
+++ b/themes/cdmstheme/layouts/_default/laporan.html
@@ -53,7 +53,7 @@
                       <a href="#"> Laporan Bulan Spetember 2022</a><br>
                     </li>
                     <li>
-                      <a href="#"> Laporan Bulan Oktober 2022</a><br>
+                      <a href="/laporan/oktober.pdf"> Laporan Bulan Oktober 2022</a><br>
                     </li>
                     <li>
                       <a href="#"> Laporan Bulan November 2022</a><br>
