--- a/themes/cdmstheme/layouts/_default/laporan.html
+++ b/themes/cdmstheme/layouts/_default/laporan.html
@@ -59,7 +59,7 @@
                       <a href="#"> Laporan Bulan November 2022</a><br>
                     </li>
                     <li>
-                      <a href="#"> Laporan Bulan Desember 2022</a><br>
+                      <a href="/laporan/desember.pdf"> Laporan Bulan Desember 2022</a><br>
                     </li>
                   </ul>
               </div>
